Fixed extra padding on sidebar

--- a/static/css/portal.css
+++ b/static/css/portal.css
@@ -41,7 +41,6 @@ body{
     width:200px;
     height:100%;
     background-color: #9C3B82;
-    padding:5vh 0;
 }
 
 .wrapper a{
